feat: :sparkles: add image to exhibit
