# server/common/api.yml
@@ -30,11 +30,13 @@ paths:
                 - id: 1
                   title: Bla
                   text: Lorem ipsum...
+                  image: https://i.redd.it/tospo6k2u9l81.png
                   createdAt: "2022-11-27T16:10:26.507Z"
                   updatedAt: "2022-11-27T16:10:26.507Z"
                 - id: 4
                   title: Hasta la vista, baby
                   text: I need your clothes, your boots and your motorcycle.
+                  image: https://i.redd.it/tospo6k2u9l81.png
                   createdAt: "1984-10-26T11:40:24.007Z"
                   updatedAt: "1991-12-25T19:00:21.155Z"
     post:
@@ -60,6 +62,7 @@ paths:
             example:
               title: New amazing Exhibit
               text: bla-bla-bla
+              image: https://i.redd.it/tospo6k2u9l81.png
         required: true
 
       responses:
@@ -73,6 +76,7 @@ paths:
                 id: 1
                 title: New amazing Exhibit
                 text: bla-bla-bla. Created just now
+                image: https://i.redd.it/tospo6k2u9l81.png
                 createdAt: "2022-12-03T16:10:26.507Z"
                 updatedAt: "2022-12-03T16:10:26.507Z"
         401:
@@ -110,6 +114,7 @@ paths:
                 id: 1
                 title: Lorem ipsum dolor sit amet
                 text: Vivamus vitae lorem velit. Maecenas finibus consectetur viverra.
+                image: https://i.redd.it/tospo6k2u9l81.png
                 createdAt: "2022-12-03T16:10:26.507Z"
                 updatedAt: "2022-12-03T16:10:26.507Z"
         404:
@@ -182,6 +187,7 @@ components:
         - id
         - title
         - text
+        - image
         - createdAt
         - updatedAt
       type: object
@@ -191,6 +197,8 @@ components:
         title:
           type: string
         text:
+          type: string
+        image:
           type: string
         createdAt:
           type: string
@@ -207,11 +215,14 @@ components:
       required:
         - title
         - text
+        - image
       type: object
       properties:
         title:
           type: string
         text:
+          type: string
+        image:
           type: string
 
     Error:
